# TridmeKernel

./: .gitmodules  CMakeLists.txt
Test/: main.cpp
